@@ -1,3 +1,8 @@
+Sat Jan  8 17:36:05 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* intervm.c (rb_intervm_wormhole_send): can now send an array, as
+	  long as it does not include any non-sendable objects.
+
 Sat Jan  8 10:26:29 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* intervm.c (ruby_vm_join): should return something.
